# multi-mcp-servers

./: .env  README.md  pyproject.toml  server.py
mcp_servers/: mcp_math.py  mcp_science.py
